feat(parser): constraints & proper `LuaSourcePosition` class