@@ -1,13 +1,43 @@
 package dev.arsngrobg.luam.parser;
 
-public record LuaSourcePosition(int line, int column) {
-    public LuaSourcePosition {
-        if (line   < 0) throw new IllegalArgumentException("line must be unsigned");
-        if (column < 0) throw new IllegalArgumentException("column must be unsigned");
+import java.util.Objects;
+
+import dev.arsngrobg.luam.utils.Constraint;
+
+public final class LuaSourcePosition {
+    private final int line;
+    private final int column;
+
+    public LuaSourcePosition(int line, int column) {
+        this.line   = Constraint.unsignedInt(line);
+        this.column = Constraint.unsignedInt(column);
+    }
+
+    public LuaSourcePosition displacedBy(int dline, int dcolumn) {
+        return new LuaSourcePosition(getLine()+dline, getColumn()+dcolumn);
+    }
+
+    public int getLine() {
+        return line;
+    }
+
+    public int getColumn() {
+        return column;
     }
 
     @Override
-    public final String toString() {
-        return String.format("(%d, %d)", line(), column());
+    public int hashCode() {
+        return Objects.hash(getLine(), getColumn());
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        return (obj instanceof LuaSourcePosition other)
+          &&   (getLine() == other.getLine() && getColumn() == other.getColumn());
+    }
+
+    @Override
+    public String toString() {
+        return "(%d, %d)".formatted(getLine(), getColumn());
     }
 }
